added distribution todo notes to readme

--- a/README_160605.md
+++ b/README_160605.md
@@ -1,3 +1,12 @@
+TODO
+================================================
+platform independent deploy script
+use py2exe for windows 
+freeze for linux
+py2app for mac
+make script one click to deploy from linux and windows
+
+so that we can put the distributables in rocket on Rdoc or wherever. 
 
 Usage for Rocket Converter and Upload Package
 ==================================================
